--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "projekt/dashboard",
   "description": "Panel aplikacji do zarządzania imporezami",
   "require": {
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "phpmailer/phpmailer": "^6.9"
   }
 }
