--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
   "name": "projekt/dashboard",
-  "description": "Panel aplikacji do zarządzania imporezami",
+  "description": "Panel aplikacji do zarządzania weselami",
   "require": {
     "vlucas/phpdotenv": "^5.6",
-    "phpmailer/phpmailer": "^6.9"
+    "phpmailer/phpmailer": "^6.9",
+    "tecnickcom/tcpdf": "^6.8"
   }
 }
