--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,13 @@
     "vlucas/phpdotenv": "^5.6",
     "phpmailer/phpmailer": "^6.9",
     "tecnickcom/tcpdf": "^6.8"
+  },
+  "require-dev": {
+    "phpdocumentor/phpdocumentor": "^3.1"
+  },
+  "config": {
+    "allow-plugins": {
+      "symfony/flex": true
+    }
   }
 }
